--- a/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
@@ -1,25 +1,33 @@
 <h2 class="mat-h2" [translate]="'internaciones.anamnesis.diagnosticos.TITLE'"></h2>
 <mat-card>
 	<mat-card-content>
-		<app-concepts-search [label]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'" (onSelect)=setConcept($event)>
+		<app-concepts-search *ngIf="!snomedConcept else diagnosisForm"
+			[label]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'"
+			(onSelect)=setConcept($event)>
 		</app-concepts-search>
-		<form [formGroup]="form" (ngSubmit)="addToList()">
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'">
-				</mat-label>
-				<input matInput type="text" formControlName="snomed" name="snomed" readonly>
-				<mat-error [translate]="'internaciones.anamnesis.REQUIRED_SEARCH'">
-				</mat-error>
-			</mat-form-field>
-			<mat-checkbox formControlName="presumptive">
-				<span [translate]="'internaciones.anamnesis.diagnosticos.PRESUMPTIVE'"></span>
-			</mat-checkbox>
-			<div align="end">
-				<button class="uppercase" mat-raised-button color="primary" type="submit">
-					<span [translate]="'internaciones.anamnesis.diagnosticos.ADD'"></span>
-				</button>
-			</div>
-		</form>
+		<ng-template #diagnosisForm>
+			<form [formGroup]="form" (ngSubmit)="addToList()">
+				<mat-form-field appearance="outline">
+					<mat-label [translate]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'">
+					</mat-label>
+					<input matInput type="text" formControlName="snomed" name="snomed" readonly matTooltip="{{ snomedConcept.pt }}">
+					<button id="clear" mat-button matSuffix color="warn" mat-icon-button
+						(click)="resetForm()">
+						<mat-icon>close</mat-icon>
+					</button>
+					<mat-error [translate]="'internaciones.anamnesis.REQUIRED_SEARCH'">
+					</mat-error>
+				</mat-form-field>
+				<mat-checkbox formControlName="presumptive">
+					<span [translate]="'internaciones.anamnesis.diagnosticos.PRESUMPTIVE'"></span>
+				</mat-checkbox>
+				<div align="end">
+					<button class="uppercase" mat-raised-button color="primary" type="submit">
+						<span [translate]="'internaciones.anamnesis.diagnosticos.ADD'"></span>
+					</button>
+				</div>
+			</form>
+		</ng-template>
 	</mat-card-content>
 </mat-card>
 
