--- a/front-end/webapp/src/app/modules/internacion/components/concepts-search/concepts-search.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/concepts-search/concepts-search.component.html
@@ -1,7 +1,7 @@
 <mat-form-field>
 	<mat-label [translate]="'internaciones.anamnesis.SEARCH'" [translateParams]="{ conceptLabel: translatedLabel }"></mat-label>
 	<input matInput type="text" [(ngModel)]="searchValue">
-	<button id="clear" mat-button *ngIf="searchValue" matSuffix color="warn" mat-icon-button
+	<button id="clear" type="button" mat-button *ngIf="searchValue" matSuffix color="warn" mat-icon-button
 		(click)="clear()">
 		<mat-icon>close</mat-icon>
 	</button>
