--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -69,6 +69,9 @@ $box-bg-color: #EDF1F7;
 			border-collapse: collapse;
 			th, td {
 				text-align: left;
+				&:last-child {
+					text-align: end;
+				}
 				&:first-child {
 					padding-left: 24px;
 				}
