--- a/front-end/webapp/src/app/modules/internacion/components/antecedentes-personales/antecedentes-personales.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/antecedentes-personales/antecedentes-personales.component.html
@@ -31,7 +31,7 @@
 
 <section>
 	<h3 class="mat-h2" [translate]="'internaciones.anamnesis.antecedentes-personales.table.TITLE'"></h3>
-	<table mat-table [dataSource]="dataSource" class="secondary">
+	<table mat-table [dataSource]="personalHistories" class="secondary">
 
 		<ng-container *ngFor="let column of columns" [matColumnDef]="column.def">
 			<th *matHeaderCellDef>{{ column.header | translate }}</th>
@@ -50,5 +50,5 @@
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 	</table>
-	<app-no-data class="table" *ngIf="dataSource.data.length === 0"></app-no-data>
+	<app-no-data class="table" *ngIf="personalHistories.length === 0"></app-no-data>
 </section>
