--- a/front-end/webapp/src/app/modules/internacion/components/medicacion/medicacion.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/medicacion/medicacion.component.html
@@ -49,7 +49,7 @@
 
 <section>
 	<h3 class="mat-body-2" [translate]="'internaciones.anamnesis.medicacion.table.TITLE'"></h3>
-	<table mat-table [dataSource]="dataSource" class="secondary">
+	<table mat-table [dataSource]="medications" class="secondary">
 
 		<ng-container *ngFor="let column of columns" [matColumnDef]="column.def">
 			<th *matHeaderCellDef>{{ column.header | translate }}</th>
@@ -68,5 +68,5 @@
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 	</table>
-	<app-no-data class="table" *ngIf="dataSource.data.length === 0"></app-no-data>
+	<app-no-data class="table" *ngIf="medications.length === 0"></app-no-data>
 </section>
