--- a/front-end/webapp/src/app/modules/internacion/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/vacunas/vacunas.component.html
@@ -40,7 +40,7 @@
 
 <section>
 	<h3 class="mat-body-2" [translate]="'internaciones.anamnesis.vacunas.table.TITLE'"></h3>
-	<table mat-table [dataSource]="dataSource" class="secondary">
+	<table mat-table [dataSource]="inmunizations" class="secondary">
 
 		<ng-container *ngFor="let column of columns" [matColumnDef]="column.def">
 			<th *matHeaderCellDef>{{ column.header | translate }}</th>
@@ -59,5 +59,5 @@
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 	</table>
-	<app-no-data class="table" *ngIf="dataSource.data.length === 0"></app-no-data>
+	<app-no-data class="table" *ngIf="inmunizations.length === 0"></app-no-data>
 </section>
