--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -223,25 +223,26 @@
 
 				</mat-card-content>
 			</mat-card>
-			<div class="form-buttons">
-				<div class="buttons">
-					<button mat-stroked-button type="button" color="primary" (click)="back()">
-						<span class="uppercase"
-							  [translate]="'internaciones.anamnesis.buttons.BACK'">
-						</span>
-					</button>
-					<button id="save-draft" mat-stroked-button type="button" color="primary">
-						<span class="uppercase" [translate]="'internaciones.anamnesis.buttons.SAVE_DRAFT'"></span>
-					</button>
-				</div>
-				<div class="sign-buttons">
-					<mat-checkbox formControlName="attachSignature">
-						<span [translate]="'internaciones.anamnesis.buttons.ATTACH_SIGNATURE'"></span>
-					</mat-checkbox>
-					<button id="sign-confirm" mat-raised-button type="submit" color="primary">
-						<span class="uppercase" [translate]="'internaciones.anamnesis.buttons.SIGN_CONFIRM'"></span>
-					</button>
-				</div>
+		</section>
+
+		<section id="buttons" class="form-buttons">
+			<div class="buttons">
+				<button mat-stroked-button type="button" color="primary" (click)="back()">
+					<span class="uppercase"
+						  [translate]="'internaciones.anamnesis.buttons.BACK'">
+					</span>
+				</button>
+				<button *ngIf="false" id="save-draft" mat-stroked-button type="submit" color="primary">
+					<span class="uppercase" [translate]="'internaciones.anamnesis.buttons.SAVE_DRAFT'"></span>
+				</button>
+			</div>
+			<div class="sign-buttons">
+				<mat-checkbox formControlName="attachSignature">
+					<span [translate]="'internaciones.anamnesis.buttons.ATTACH_SIGNATURE'"></span>
+				</mat-checkbox>
+				<button id="sign-confirm" mat-raised-button type="submit" color="primary">
+					<span class="uppercase" [translate]="'internaciones.anamnesis.buttons.SIGN_CONFIRM'"></span>
+				</button>
 			</div>
 		</section>
 	</form>
