--- a/front-end/webapp/src/app/modules/internacion/routes/nota-evolucion/nota-evolucion.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/nota-evolucion/nota-evolucion.component.html
@@ -1,5 +1,6 @@
 <app-content width="full">
 	<div class="container-row">
+		<app-nota-evolucion-form></app-nota-evolucion-form>
 		<article>
 			<!-- position sticky only works with ancestors of known elements (html5)-->
 			<div class="sticky">
