--- a/front-end/webapp/src/app/modules/core/components/sidenav/sidenav.component.html
+++ b/front-end/webapp/src/app/modules/core/components/sidenav/sidenav.component.html
@@ -2,8 +2,9 @@
 	<mat-sidenav mode="side" opened>
 		<mat-nav-list>
 			<mat-list-item
-					[routerLink]=menuItem.url
+					[routerLink]="menuItem.url"
 					routerLinkActive="active"
+					[routerLinkActiveOptions]="menuItem.options || {exact: false}"
 					*ngFor="let menuItem of menuItems">
 				<mat-icon matListIcon>{{menuItem.icon}}</mat-icon>
 				<span [translate]=menuItem.text></span>
