tg-347 fixes varios estilos del figma

--- a/front-end/webapp/src/app/modules/core/components/sidenav/sidenav.component.html
+++ b/front-end/webapp/src/app/modules/core/components/sidenav/sidenav.component.html
@@ -6,7 +6,7 @@
 					routerLinkActive="active"
 					[routerLinkActiveOptions]="menuItem.options || {exact: false}"
 					*ngFor="let menuItem of menuItems">
-				<mat-icon matListIcon>{{menuItem.icon}}</mat-icon>
+				<mat-icon matListIcon fontSet="material-icons-outlined">{{menuItem.icon}}</mat-icon>
 				<span [translate]=menuItem.text></span>
 			</mat-list-item>
 		</mat-nav-list>
