--- a/front-end/webapp/src/app/modules/auth/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/auth/routes/home/home.component.html
@@ -11,7 +11,7 @@
 					<span *ngSwitchDefault>Tiene acceso a las siguientes instituciones:</span>
 				</div>
 				<mat-list-item *ngFor="let institution of institutions" role="listitem">
-					<mat-icon mat-list-icon>verified_user</mat-icon>
+					<mat-icon mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
 					<h3 matLine >{{institution.name}}</h3>
 				</mat-list-item>
 				<mat-divider></mat-divider>
