--- a/front-end/webapp/src/app/modules/auth/routes/profile/profile.component.html
+++ b/front-end/webapp/src/app/modules/auth/routes/profile/profile.component.html
@@ -8,7 +8,7 @@
 			<mat-divider></mat-divider>
 			<div mat-header>Roles</div>
 			<mat-list-item *ngFor="let roleAssignment of roleAssignments" role="listitem">
-				<mat-icon mat-list-icon>verified_user</mat-icon>
+				<mat-icon mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
 				<h3 matLine [translate]="roleAssignment.label"></h3>
 				<p matLine *ngIf="roleAssignment.institution">
 					{{roleAssignment.institution.name}}
