--- a/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
@@ -1,7 +1,7 @@
 <mat-list content>
 	<mat-list-item id="bed">
 		<div class="flex-container">
-			<mat-icon color="primary" mat-list-icon [inline]="true">meeting_room</mat-icon>
+			<mat-icon color="primary" mat-list-icon fontSet="material-icons-outlined" [inline]="true">meeting_room</mat-icon>
 			<span class="mat-body-2">{{ internmentEpisode?.roomNumber }}</span>
 			<mat-icon color="primary" mat-list-icon [inline]="true">single_bed</mat-icon>
 			<span class="mat-body-2">{{ internmentEpisode?.bedNumber }}</span>
@@ -14,7 +14,7 @@
 	<mat-divider inset></mat-divider>
 
 	<mat-list-item id="doctor">
-		<mat-icon color="primary" mat-list-icon>person</mat-icon>
+		<mat-icon color="primary" mat-list-icon>person_outline</mat-icon>
 		<span class="mat-body-2">
 			{{internmentEpisode?.doctor.firstName}} {{internmentEpisode?.doctor.lastName}}
 		</span>
