--- a/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
@@ -40,7 +40,7 @@
 
 		<ng-container matColumnDef="remove">
 			<th mat-header-cell *matHeaderCellDef></th>
-			<td mat-cell *matCellDef="let element; index as i">
+			<td mat-cell class="actions" *matCellDef="let element; index as i">
 				<button mat-icon-button color="warn" (click)="remove(i)">
 					<mat-icon>delete_outline</mat-icon>
 				</button>
