--- a/front-end/webapp/src/app/modules/internacion/routes/epicrisis/epicrisis.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/epicrisis/epicrisis.component.html
@@ -1,1 +1,13 @@
-<p>epicrisis works!</p>
+<app-content width="full">
+	<div class="container-row">
+		<app-epicrisis-form></app-epicrisis-form>
+		<article>
+			<!-- position sticky only works with ancestors of known elements (html5)-->
+			<div class="sticky">
+				<app-patient-card [patient]="patient$ | async">
+					<app-internment-episode-summary [internmentEpisode]="internmentEpisodeSummary$ | async" content></app-internment-episode-summary>
+				</app-patient-card>
+			</div>
+		</article>
+	</div>
+</app-content>
