--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -69,6 +69,9 @@ $default-color: 100;
 		th, td {
 			padding-left: 10px;
 			padding-right: 10px;
+			&.actions {
+				text-align: end;
+			}
 		}
 		&.primary {
 			text-align: center;
@@ -78,17 +81,22 @@ $default-color: 100;
 					text-align: center;
 					color: mat-contrast($primary-palette, $default-color);
 				}
+				th, td {
+					&.actions {
+						text-align: end;
+					}
+				}
 			}
 		}
 		&.secondary {
 			border-collapse: collapse;
 			th, td {
 				text-align: left;
-				&:last-child {
-					text-align: end;
-				}
 				&:first-child {
 					padding-left: 24px;
+				}
+				&.actions {
+					text-align: end;
 				}
 			}
 			thead {
