tg-350 datos incorrectos en select de camas, se agrega validacion de campos requeridos e InternmentEpisodeService

--- a/front-end/webapp/src/app/modules/internacion/routes/new-internment/new-internment.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/routes/new-internment/new-internment.component.scss
@@ -1,5 +1,16 @@
 @import "../../../../../assets/styles/mixins.scss";
 
+.section-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
 .form-row{
 	@include form-row;
+}
+
+.header{
+	display: flex;
+	justify-content: flex-end;
 }
