--- a/front-end/webapp/src/app/modules/internacion/routes/new-internment/new-internment.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/new-internment/new-internment.component.html
@@ -1,122 +1,144 @@
 <app-content width="full">
-	<section class="page">
-		<h2 class="page-title" [translate]="'internaciones.new-internment.TITLE'"></h2>
-		<h4 class="page-title" [translate]="'internaciones.new-internment.SUBTITLE'"></h4>
-		<br>
-		<form [formGroup]="form" (ngSubmit)="save()">
-			<section>
-				<h2 [translate]="'internaciones.new-internment.SECTION_SERVICE'"></h2>
-				<div class="form-row">
-					<span [translate]="'Tipo de internación'"></span>
-				</div>
-				<div class="form-row">
-					<mat-form-field appearance="outline">
-						<mat-select id="specialty"
-									name="specialty"
-									formControlName="specialty"
-									placeholder="{{'pacientes.form.SELECT' | translate}}">
-							<mat-option *ngFor="let specialty of specialties"
-										[value]="specialty.id">
-								{{specialty.name}}
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-			</section>
-			<section>
-				<h2 [translate]="'internaciones.new-internment.SECTION_BED'"></h2>
-				<div class="form-row">
-					<span [translate]="'Sector'"></span>
-				</div>
-				<div class="form-row">
-					<mat-form-field appearance="outline">
-						<mat-select id="sector"
-									name="sector"
-									formControlName="sector"
-									placeholder="{{'pacientes.form.SELECT' | translate}}"
-									(selectionChange)="setService()">
-							<mat-option *ngFor="let sector of sectors"
-										[value]="sector.id">
-								{{sector.description}}
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-				<div class="form-row">
-					<span [translate]="'Servicio'"></span>
-				</div>
-				<div class="form-row">
-					<mat-form-field appearance="outline">
-						<mat-select id="service"
-									name="service"
-									formControlName="service"
-									placeholder="{{'pacientes.form.SELECT' | translate}}"
-									(selectionChange)="setRoom()">
-							<mat-option *ngFor="let service of services"
-										[value]="service.id">
-								{{service.name}}
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-				<div class="form-row">
-					<span [translate]="'N° de habitación'"></span>
-				</div>
-				<div class="form-row">
-					<mat-form-field appearance="outline">
-						<mat-select id="room"
-									name="room"
-									formControlName="room"
-									placeholder="{{'pacientes.form.SELECT' | translate}}"
-									(selectionChange)="setBeds()">
-							<mat-option *ngFor="let room of rooms"
-										[value]="room.id">
-								{{room.roomNumber}}
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-				<div class="form-row">
-					<span [translate]="'N° de cama'"></span>
-				</div>
-				<div class="form-row">
-					<mat-form-field appearance="outline">
-						<mat-select id="bed"
-									name="bed"
-									formControlName="bed"
-									placeholder="{{'pacientes.form.SELECT' | translate}}">
-							<mat-option *ngFor="let specialty of specialties"
-										[value]="specialty.id">
-								{{specialty.name}}
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-			</section>
-			<section>
-				<h2 [translate]="'internaciones.new-internment.SECTION_DOCTOR'"></h2>
-				<div class="form-row">
-					<span [translate]="'Nombre del médico'"></span>
-				</div>
-				<div class="form-row">
-					<mat-form-field appearance="outline">
-						<mat-select id="professional"
-									name="professional"
-									formControlName="professional"
-									placeholder="{{'pacientes.form.SELECT' | translate}}">
-							<mat-option *ngFor="let professional of professionals"
-										[value]="professional.id">
-								{{ professional.person.firstName + ' ' + professional.person.lastName }}
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-			</section>
-			<section>
-				<button mat-raised-button color="primary" type="submit">
-					<span [translate]="'buttons.CONTINUE'"></span>
-				</button>
-			</section>
-		</form>
-	</section>
+	<div class="section-container">
+		<section class="page">
+			<h2 class="page-title" [translate]="'internaciones.new-internment.TITLE'"></h2>
+			<h4 class="page-title" [translate]="'internaciones.new-internment.SUBTITLE'"></h4>
+			<br>
+			<form [formGroup]="form" (ngSubmit)="save()">
+				<section>
+					<h2 [translate]="'internaciones.new-internment.SECTION_SERVICE'"></h2>
+					<div class="form-row">
+						<span [translate]="'Tipo de internación'"></span>
+					</div>
+					<div class="form-row">
+						<mat-form-field appearance="outline">
+							<mat-select id="specialtyId"
+										name="specialtyId"
+										formControlName="specialtyId"
+										placeholder="{{'pacientes.form.SELECT' | translate}}">
+								<mat-option *ngFor="let specialty of specialties"
+											[value]="specialty.id">
+									{{specialty.name}}
+								</mat-option>
+							</mat-select>
+							<mat-error [translate]="'pacientes.form.REQUIRED'"></mat-error>
+						</mat-form-field>
+					</div>
+				</section>
+				<section>
+					<h2 [translate]="'internaciones.new-internment.SECTION_BED'"></h2>
+					<div class="form-row">
+						<span [translate]="'Sector'"></span>
+					</div>
+					<div class="form-row">
+						<mat-form-field appearance="outline">
+							<mat-select id="sectorId"
+										name="sectorId"
+										formControlName="sectorId"
+										placeholder="{{'pacientes.form.SELECT' | translate}}"
+										(selectionChange)="setService()">
+								<mat-option *ngFor="let sector of sectors"
+											[value]="sector.id">
+									{{sector.description}}
+								</mat-option>
+							</mat-select>
+							<mat-error [translate]="'pacientes.form.REQUIRED'"></mat-error>
+						</mat-form-field>
+					</div>
+					<div class="form-row">
+						<span [translate]="'Servicio'"></span>
+					</div>
+					<div class="form-row">
+						<mat-form-field appearance="outline">
+							<mat-select id="serviceId"
+										name="serviceId"
+										formControlName="serviceId"
+										placeholder="{{'pacientes.form.SELECT' | translate}}"
+										(selectionChange)="setRoom()">
+								<mat-option *ngFor="let service of services"
+											[value]="service.id">
+									{{service.name}}
+								</mat-option>
+							</mat-select>
+							<mat-error [translate]="'pacientes.form.REQUIRED'"></mat-error>
+						</mat-form-field>
+					</div>
+					<div class="form-row">
+						<span [translate]="'N° de habitación'"></span>
+					</div>
+					<div class="form-row">
+						<mat-form-field appearance="outline">
+							<mat-select id="roomId"
+										name="roomId"
+										formControlName="roomId"
+										placeholder="{{'pacientes.form.SELECT' | translate}}"
+										(selectionChange)="setBeds()">
+								<mat-option *ngFor="let room of rooms"
+											[value]="room.id">
+									{{room.roomNumber}}
+								</mat-option>
+							</mat-select>
+							<mat-error [translate]="'pacientes.form.REQUIRED'"></mat-error>
+						</mat-form-field>
+					</div>
+					<div class="form-row">
+						<span [translate]="'N° de cama'"></span>
+					</div>
+					<div class="form-row">
+						<mat-form-field appearance="outline">
+							<mat-select id="bedId"
+										name="bedId"
+										formControlName="bedId"
+										placeholder="{{'pacientes.form.SELECT' | translate}}">
+								<mat-option *ngFor="let bed of beds"
+											[value]="bed.id">
+									{{bed.bedNumber}}
+								</mat-option>
+							</mat-select>
+							<mat-error [translate]="'pacientes.form.REQUIRED'"></mat-error>
+						</mat-form-field>
+					</div>
+				</section>
+				<section>
+					<h2 [translate]="'internaciones.new-internment.SECTION_DOCTOR'"></h2>
+					<div class="form-row">
+						<span [translate]="'Nombre del médico'"></span>
+					</div>
+					<div class="form-row">
+						<mat-form-field appearance="outline">
+							<mat-select id="doctorId"
+										name="doctorId"
+										formControlName="doctorId"
+										placeholder="{{'pacientes.form.SELECT' | translate}}">
+								<mat-option *ngFor="let doctor of doctors"
+											[value]="doctor.id">
+									{{ doctor.person.firstName + ' ' + doctor.person.lastName }}
+								</mat-option>
+							</mat-select>
+							<mat-error [translate]="'pacientes.form.REQUIRED'"></mat-error>
+						</mat-form-field>
+					</div>
+				</section>
+				<section>
+					<button mat-raised-button color="primary" type="submit">
+						<span [translate]="'buttons.CONTINUE'"></span>
+					</button>
+				</section>
+			</form>
+		</section>
+
+		<section>
+			<div class="profile-card">
+				<app-patient-card [patient]="patientBasicData">
+					<div header class="header">
+						<app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
+					</div>
+					<div content>
+						<app-personal-information
+							[personalInformation]="personalInformation"></app-personal-information>
+					</div>
+				</app-patient-card>
+			</div>
+		</section>
+	</div>
 </app-content>
